force-app/main/default/objects/ucinn_ascendv2__Matching_Keys__c/ucinn_ascendv2__Matching_Keys__c.object-meta.xml
<CustomObject>
    <description>Fields selected for creating the matching keys for the matching rule</description>
    <label>Matching Key</label>
    <nameField>
        <label>Matching Keys Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matching Keys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>