force-app/main/default/objects/ucinn_ascendv2__Matching_Keys__c/fields/ucinn_ascendv2__Creation_Method__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Creation_Method__c</fullName>
    <description>Method used for creating the matching key for each field</description>
    <label>Creation Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>City(_, 6)</fullName>
            </value>
            <value>
                <fullName>Company(2,6)</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>First 3 Characters</fullName>
            </value>
            <value>
                <fullName>First 4 Characters</fullName>
            </value>
            <value>
                <fullName>First 5 Characters</fullName>
            </value>
            <value>
                <fullName>FirstName(1,1)</fullName>
            </value>
            <value>
                <fullName>Last 3 Characters</fullName>
            </value>
            <value>
                <fullName>LastName(Double Metaphone)</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Zip(1,3)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>