force-app/main/default/objects/ucinn_ascendv2__Matching_Keys__c/fields/ucinn_ascendv2__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_API_Name__c</fullName>
    <description>Field selected for creating the matching key</description>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>