force-app/main/default/objects/ucinn_ascendv2__Matching_Keys__c/fields/ucinn_ascendv2__Field_Index__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_Index__c</fullName>
    <description>Determine in which order this field appeared in the created matching key.</description>
    <label>Field Index</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>