force-app/main/default/objects/ucinn_ascendv2__Matching_Keys__c/fields/ucinn_ascendv2__Matching_Key_Rule__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Key_Rule__c</fullName>
    <description>Indicate which matching key rule this matching key belongs to.</description>
    <label>Matching Key Rule</label>
    <referenceTo>ucinn_ascendv2__Matching_Key_Rule__c</referenceTo>
    <relationshipLabel>Matching Keys</relationshipLabel>
    <relationshipName>Matching_Keys_Matching_Key_Rule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>